--- a/cloud-resume-challenge/template.yaml
+++ b/cloud-resume-challenge/template.yaml
@@ -18,7 +18,20 @@ Resources:
       WebsiteConfiguration:
         IndexDocument: index.html
       BucketName: kenyw.com
-  
+      
+  DynamoDBTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: cloud-resume-challenge
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: "ID"
+          AttributeType: "S"
+      KeySchema:
+        - AttributeName: "ID"
+          KeyType: "HASH"
+
+
   MyRoute53Record:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
