ep14 almost finish

--- a/cloud-resume-challenge/Makefile
+++ b/cloud-resume-challenge/Makefile
@@ -8,3 +8,9 @@ deploy-infra:
 
 deploy-site:
 	aws s3 sync ./resume-site s3://kenyw.com
+
+invoke-put:
+	sam build && sam local invoke PutFunction
+
+invoke-get:
+	sam build && sam local invoke PutFunction
