--- a/cloud-resume-challenge/template.yaml
+++ b/cloud-resume-challenge/template.yaml
@@ -97,6 +97,9 @@ Resources:
   GetFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: cloud-resume-challenge
       CodeUri: get-function/
       Handler: get-function
       Runtime: go1.x
@@ -111,6 +114,9 @@ Resources:
   PutFunction:
       Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
       Properties:
+        Policies:
+          - DynamoDBCrudPolicy:
+              TableName: cloud-resume-challenge
         CodeUri: put-function/
         Handler: put-function
         Runtime: go1.x
